Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57145

QVideoWidget does not properly scale for high dpi screens

    XMLWordPrintable

Details

    • 23a74e810bb2ec4cb950eaae9760889c1e8a5d54 (qtmultimedia/5.8, 11.1.2017, 5.8.1)

    Description

      When using a QVideoWidget with high dpi enabled application (dpiawareness=2, per monitor dpi aware), moving the window to the high dpi screen does not properly scale the QVideoWidget. Other widgets like QTextEdit and QPushButton are properly scaled at the same time.

      With dpiawareness=1 (System does scaling) this issue is not reproducible.

      Steps to reproduce:

      • Run Qt example "Video Widget Example" with QApplication::setAttribute(Qt::AA_EnableHighDpiScaling); and dpiawareness=2 set.
      • Load a video and play it
      • Move the window to another monitor (i.e. 4k monitor with higher text size set, for example 200%)
      • EXPECTED: All widgets in the application are properly scaled
      • ACTUAL: QVideoWidget is scaled to be very small compared to other controls (buttons, progress bar) which properly keep their size

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes