QWindowVideoWidgetBackend: scale coordinates passed to control

Use native coordinates when setting the display rectangle.

Task-number: QTBUG-57145
Change-Id: I4783edcbee021e6020e8ca946f15cca8a1173589
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Yoann Lopes <yoann.lopes@qt.io>